fixed searchbar is not visible while loading

--- a/src/Pages/Error/Error.css
+++ b/src/Pages/Error/Error.css
@@ -1,9 +1,13 @@
 .error {
 	width: 100%;
-	height: 70vh;
+	height: 60vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
 	color: var(--text);
+}
+
+.error h1 {
+	margin-bottom: 30px;
 }
