--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -18,7 +18,7 @@
 
 .app {
 	background-color: var(--bg);
-	min-height: 90vh;
+	min-height: 91vh;
 	height: auto;
 }
 
