--- a/src/Pages/Loading/Loading.css
+++ b/src/Pages/Loading/Loading.css
@@ -1,6 +1,6 @@
 .loading {
 	width: 100%;
-	height: 80vh;
+	height: 70vh;
 	display: flex;
 	align-items: center;
 	justify-content: center;
